k8s/deptest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: samdepl
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hewitt
  template:
      metadata:
        name: testpod4
        labels:
          app: hewitt
      spec:
        containers:
          - name: cont1
            image: nginx:latest
            ports:  
            - containerPort: 80
