k8s/ingress-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: samdepl
spec:
  replicas: 4
  selector:
    matchLabels:
      app: hewitt
  template:
      metadata:
        name: testpod1
        labels:
          app: hewitt
      spec:
        containers:
          - name: cont1
            image: nginx:latest
            ports:  
            - containerPort: 80 
---
apiVersion: v1
kind: Service
metadata:
  name: ndp-svc
spec:
  type: NodePort
  selector:
   app: hewitt
  ports:
    - port: 8082
      targetPort: 80
      nodePort: 30007
