k8s/pava.yaml
apiVersion: v1
kind: Pod
metadata:
  name: testpod1
  labels:
    team: aigint
spec:
  - containers:
      name: cont1
      image: nginx:latest
      ports:
        containerPort: 80

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: samdepl
spec:
  replicas: 3
  selector:
    matchLabels:
      app: aigint
  template:
      metadata:
        name: testpod
        labels:
          app: aigint
      spec:
        containers:
          - name: cont1
            image: nginx:latest
            ports:  
            - containerPort: 80    

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: samdepl
  annotations:
    kubernetes.io/change-cause: "upadating to alpine "
spec:
  replicas: 3
  selector:
  matchLabels:
    team: aigint
  template:
  metadata:
  name: testpod1
  labels:
    team: aigint
    spec:
      - containers:
          name: cont1
          image: nginx:alpine
          ports:
            containerPort: 80    

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: samdepl
  annotations:
    kubernetes.io/change-cause: "upadating to alpine "
spec:
  replicas: 3
  selector:
    matchLabels:
      app: aigint
  template:
      metadata:
        name: testpod
        labels:
          app: aigint
      spec:
        containers:
          - name: cont1
            image: nginx:alpine
            ports:  
            - containerPort: 80    
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
spec:
  type: ClusterIP
  selector:
   app: aigint
  ports:
    - port: 8082
      targetPort: 80

---
apiVersion: v1
kind: Pod
metadata:
  name: testpod3
  labels:
   app: todo
spec:
  containers:
  - image: nginx
    name: testpod3  
---
apiVersion: v1
kind: Pod
metadata:
  name: testpod1
  labels:
    team: integraion
    app: todo
spec:
  containers:
  - name: cont1
    image: nginx:latest
    ports:
     - containerPort: 80
