k8s/practice.yaml
#
apiVersion: v1
kind: Pod
metadata:
  name: testpod2
  labels:
   app: aig
spec:
  containers:
  - image: nginx
    name: testpod2
    ports:
    - containerPort: 80
---
#
apiVersion: v1
kind: Pod
metadata:
  name: testpod1
  labels:
   app: aig
spec:
  containers:
  - image: nginx
    name: testpod1
    ports:
    - containerPort: 80
---
#
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
spec:
  type: ClusterIP
  selector:
   app: aig
  ports:
    - port: 8082
      targetPort: 80
---
#
apiVersion: apps/v1
kind: Deployment
metadata:
  name: samdepl
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hewitt
  template:
      metadata:
        name: testpod4
        labels:
          app: hewitt
      spec:
        containers:
          - name: cont1
            image: nginx:latest
            ports:  
            - containerPort: 80 
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: samdepl
  annotations:
   kubernetes.io/change-cause: "upadating to alpine "
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hewitt
  template:
      metadata:
        name: testpod4
        labels:
          app: hewitt
      spec:
        containers:
          - name: cont1
            image: nginx:alpine
            ports:  
            - containerPort: 80             
---
#  
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
spec:
  type: NodePort
  selector:
   app: aig
  ports:
    - port: 8082
      targetPort: 80
