k8s/serTest.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
spec:
  type: ClusterIP
  selector:
   app: aig
  ports:
    - port: 8082
      targetPort: 80
